ocaml/minocaml5/minParser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | EOF

   5  top_structure : seq_expr
   6                | top_structure_tail

   7  top_structure_tail :
   8                     | structure_item top_structure_tail

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | structure_item use_file_tail

  16  parse_core_type : core_type EOF

  17  parse_expression : seq_expr EOF

  18  parse_pattern : pattern EOF

  19  structure : seq_expr structure_tail
  20            | structure_tail

  21  structure_tail :
  22                 | SEMISEMI structure
  23                 | structure_item structure_tail

  24  structure_item : LET rec_flag let_bindings
  25                 | open_statement

  26  signature :
  27            | SEMISEMI signature
  28            | signature_item signature

  29  signature_item : VAL val_ident COLON core_type
  30                 | open_statement

  31  open_statement : OPEN mod_longident

  32  seq_expr : expr
  33           | expr SEMI
  34           | expr SEMI seq_expr

  35  labeled_simple_pattern : LABEL simple_pattern
  36                         | simple_pattern

  37  expr : simple_expr
  38       | simple_expr simple_labeled_expr_list
  39       | LET rec_flag let_bindings_no_attrs IN seq_expr
  40       | FUN labeled_simple_pattern fun_def
  41       | expr_comma_list
  42       | constr_longident simple_expr
  43       | IF seq_expr THEN expr ELSE expr
  44       | IF seq_expr THEN expr
  45       | expr INFIXOP0 expr
  46       | expr INFIXOP1 expr
  47       | expr INFIXOP2 expr
  48       | expr INFIXOP3 expr
  49       | expr INFIXOP4 expr
  50       | expr PLUS expr
  51       | expr PLUSDOT expr
  52       | expr PLUSEQ expr
  53       | expr MINUS expr
  54       | expr MINUSDOT expr
  55       | expr STAR expr
  56       | expr PERCENT expr
  57       | expr EQUAL expr
  58       | expr LESS expr
  59       | expr GREATER expr
  60       | expr OR expr
  61       | expr BARBAR expr
  62       | expr AMPERSAND expr
  63       | expr AMPERAMPER expr
  64       | expr COLONEQUAL expr
  65       | subtractive expr
  66       | additive expr
  67       | simple_expr DOT label_longident LESSMINUS expr
  68       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
  69       | label LESSMINUS expr
  70       | ASSERT simple_expr

  71  simple_expr : val_longident
  72              | constant
  73              | constr_longident
  74              | LPAREN seq_expr RPAREN
  75              | BEGIN seq_expr END
  76              | BEGIN END
  77              | LPAREN seq_expr type_constraint RPAREN
  78              | simple_expr DOT label_longident
  79              | mod_longident DOT LPAREN seq_expr RPAREN
  80              | simple_expr DOT LPAREN seq_expr RPAREN
  81              | PREFIXOP simple_expr
  82              | BANG simple_expr

  83  simple_labeled_expr_list : labeled_simple_expr
  84                           | simple_labeled_expr_list labeled_simple_expr

  85  labeled_simple_expr : simple_expr
  86                      | label_expr

  87  label_expr : LABEL simple_expr
  88             | TILDE label_ident

  89  label_ident : LIDENT

  90  let_bindings : let_binding
  91               | let_bindings AND let_binding

  92  let_bindings_no_attrs : let_bindings

  93  let_binding : let_binding_

  94  let_binding_ : val_ident fun_binding
  95               | pattern EQUAL seq_expr
  96               | simple_pattern_not_ident COLON core_type EQUAL seq_expr

  97  fun_binding : strict_binding
  98              | type_constraint EQUAL seq_expr

  99  strict_binding : EQUAL seq_expr
 100                 | labeled_simple_pattern fun_binding

 101  fun_def : MINUSGREATER seq_expr
 102          | labeled_simple_pattern fun_def

 103  expr_comma_list : expr_comma_list COMMA expr
 104                  | expr COMMA expr

 105  type_constraint : COLON core_type
 106                  | COLON core_type COLONGREATER core_type
 107                  | COLONGREATER core_type

 108  pattern : simple_pattern
 109          | pattern AS val_ident
 110          | pattern_comma_list
 111          | constr_longident pattern
 112          | pattern BAR pattern
 113          | EXCEPTION pattern

 114  simple_pattern : val_ident
 115                 | simple_pattern_not_ident

 116  simple_pattern_not_ident : UNDERSCORE
 117                           | signed_constant
 118                           | signed_constant DOTDOT signed_constant
 119                           | constr_longident
 120                           | LBRACE lbl_pattern_list RBRACE
 121                           | LPAREN pattern RPAREN
 122                           | LPAREN pattern COLON core_type RPAREN

 123  pattern_comma_list : pattern_comma_list COMMA pattern
 124                     | pattern COMMA pattern

 125  lbl_pattern_list : lbl_pattern
 126                   | lbl_pattern SEMI
 127                   | lbl_pattern SEMI UNDERSCORE opt_semi
 128                   | lbl_pattern SEMI lbl_pattern_list

 129  lbl_pattern : label_longident EQUAL pattern
 130              | label_longident

 131  core_type : core_type2

 132  core_type2 : simple_core_type_or_tuple
 133             | LIDENT COLON core_type2 MINUSGREATER core_type2
 134             | core_type2 MINUSGREATER core_type2

 135  simple_core_type : simple_core_type2
 136                   | LPAREN core_type_comma_list RPAREN

 137  simple_core_type2 : UNDERSCORE
 138                    | type_longident
 139                    | simple_core_type2 type_longident
 140                    | LPAREN core_type_comma_list RPAREN type_longident

 141  simple_core_type_or_tuple : simple_core_type
 142                            | simple_core_type STAR core_type_list

 143  core_type_comma_list : core_type
 144                       | core_type_comma_list COMMA core_type

 145  core_type_list : simple_core_type
 146                 | core_type_list STAR simple_core_type

 147  label : LIDENT

 148  constant : INT
 149           | CHAR
 150           | STRING
 151           | FLOAT

 152  signed_constant : constant
 153                  | MINUS INT
 154                  | MINUS FLOAT
 155                  | PLUS INT
 156                  | PLUS FLOAT

 157  val_ident : LIDENT

 158  val_longident : val_ident
 159                | mod_longident DOT val_ident

 160  constr_longident : mod_longident
 161                   | LPAREN RPAREN
 162                   | FALSE
 163                   | TRUE

 164  label_longident : LIDENT
 165                  | mod_longident DOT LIDENT

 166  type_longident : LIDENT
 167                 | mod_ext_longident DOT LIDENT

 168  mod_longident : UIDENT
 169                | mod_longident DOT UIDENT

 170  mod_ext_longident : UIDENT
 171                    | mod_ext_longident DOT UIDENT
 172                    | mod_ext_longident LPAREN mod_ext_longident RPAREN

 173  rec_flag :
 174           | REC

 175  opt_semi :
 176           | SEMI

 177  subtractive : MINUS
 178              | MINUSDOT

 179  additive : PLUS
 180           | PLUSDOT

 181  %entry% : '\001' implementation
 182          | '\002' interface
 183          | '\003' toplevel_phrase
 184          | '\004' use_file
 185          | '\005' parse_core_type
 186          | '\006' parse_expression
 187          | '\007' parse_pattern

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	.  error

	%entry%  goto 8


state 1
	%entry% : '\001' . implementation  (181)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 18
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	OPEN  shift 23
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	SEMISEMI  shift 27
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	EOF  reduce 21

	implementation  goto 31
	structure  goto 32
	seq_expr  goto 33
	structure_item  goto 34
	structure_tail  goto 35
	open_statement  goto 36
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 2
	%entry% : '\002' . interface  (182)
	signature : .  (26)

	OPEN  shift 23
	SEMISEMI  shift 48
	VAL  shift 49
	EOF  reduce 26

	interface  goto 50
	signature  goto 51
	open_statement  goto 52
	signature_item  goto 53


state 3
	%entry% : '\003' . toplevel_phrase  (183)
	top_structure_tail : .  (7)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	EOF  shift 54
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 18
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	OPEN  shift 23
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	SEMISEMI  reduce 7

	toplevel_phrase  goto 55
	top_structure  goto 56
	seq_expr  goto 57
	top_structure_tail  goto 58
	structure_item  goto 59
	open_statement  goto 36
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 4
	%entry% : '\004' . use_file  (184)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	EOF  shift 60
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 18
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	OPEN  shift 23
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	SEMISEMI  shift 61
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	use_file  goto 62
	seq_expr  goto 63
	structure_item  goto 64
	use_file_tail  goto 65
	open_statement  goto 36
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 5
	%entry% : '\005' . parse_core_type  (185)

	LIDENT  shift 66
	LPAREN  shift 67
	UIDENT  shift 68
	UNDERSCORE  shift 69
	.  error

	parse_core_type  goto 70
	core_type  goto 71
	core_type2  goto 72
	simple_core_type_or_tuple  goto 73
	simple_core_type  goto 74
	simple_core_type2  goto 75
	type_longident  goto 76
	mod_ext_longident  goto 77


state 6
	%entry% : '\006' . parse_expression  (186)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 78
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	parse_expression  goto 79
	seq_expr  goto 80
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 7
	%entry% : '\007' . parse_pattern  (187)

	CHAR  shift 12
	EXCEPTION  shift 81
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LBRACE  shift 82
	LIDENT  shift 83
	LPAREN  shift 84
	MINUS  shift 85
	PLUS  shift 86
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	UNDERSCORE  shift 87
	.  error

	parse_pattern  goto 88
	pattern  goto 89
	val_ident  goto 90
	mod_longident  goto 91
	simple_pattern  goto 92
	constr_longident  goto 93
	constant  goto 94
	simple_pattern_not_ident  goto 95
	pattern_comma_list  goto 96
	signed_constant  goto 97


state 8
	$accept : %entry% . $end  (0)

	$end  accept


state 9
	expr : ASSERT . simple_expr  (70)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LIDENT  shift 83
	LPAREN  shift 20
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	val_ident  goto 37
	mod_longident  goto 38
	simple_expr  goto 98
	constr_longident  goto 99
	val_longident  goto 46
	constant  goto 47


state 10
	simple_expr : BANG . simple_expr  (82)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LIDENT  shift 83
	LPAREN  shift 20
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	val_ident  goto 37
	mod_longident  goto 38
	simple_expr  goto 100
	constr_longident  goto 99
	val_longident  goto 46
	constant  goto 47


state 11
	simple_expr : BEGIN . seq_expr END  (75)
	simple_expr : BEGIN . END  (76)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	END  shift 101
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 78
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	seq_expr  goto 102
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 12
	constant : CHAR .  (149)

	.  reduce 149


state 13
	constr_longident : FALSE .  (162)

	.  reduce 162


state 14
	constant : FLOAT .  (151)

	.  reduce 151


state 15
	expr : FUN . labeled_simple_pattern fun_def  (40)

	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LABEL  shift 103
	LBRACE  shift 82
	LIDENT  shift 83
	LPAREN  shift 84
	MINUS  shift 85
	PLUS  shift 86
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	UNDERSCORE  shift 87
	.  error

	val_ident  goto 90
	mod_longident  goto 91
	labeled_simple_pattern  goto 104
	simple_pattern  goto 105
	constr_longident  goto 106
	constant  goto 94
	simple_pattern_not_ident  goto 95
	signed_constant  goto 97


state 16
	expr : IF . seq_expr THEN expr ELSE expr  (43)
	expr : IF . seq_expr THEN expr  (44)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 78
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	seq_expr  goto 107
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 17
	constant : INT .  (148)

	.  reduce 148


state 18
	structure_item : LET . rec_flag let_bindings  (24)
	expr : LET . rec_flag let_bindings_no_attrs IN seq_expr  (39)
	rec_flag : .  (173)

	REC  shift 108
	CHAR  reduce 173
	EXCEPTION  reduce 173
	FALSE  reduce 173
	FLOAT  reduce 173
	INT  reduce 173
	LBRACE  reduce 173
	LIDENT  reduce 173
	LPAREN  reduce 173
	MINUS  reduce 173
	PLUS  reduce 173
	STRING  reduce 173
	TRUE  reduce 173
	UIDENT  reduce 173
	UNDERSCORE  reduce 173

	rec_flag  goto 109


state 19
	label : LIDENT .  (147)
	val_ident : LIDENT .  (157)

	AMPERAMPER  reduce 157
	AMPERSAND  reduce 157
	AND  reduce 157
	BANG  reduce 157
	BARBAR  reduce 157
	BEGIN  reduce 157
	CHAR  reduce 157
	COLON  reduce 157
	COLONEQUAL  reduce 157
	COLONGREATER  reduce 157
	COMMA  reduce 157
	DOT  reduce 157
	ELSE  reduce 157
	END  reduce 157
	EOF  reduce 157
	EQUAL  reduce 157
	FALSE  reduce 157
	FLOAT  reduce 157
	GREATER  reduce 157
	IN  reduce 157
	INFIXOP0  reduce 157
	INFIXOP1  reduce 157
	INFIXOP2  reduce 157
	INFIXOP3  reduce 157
	INFIXOP4  reduce 157
	INT  reduce 157
	LABEL  reduce 157
	LESS  reduce 157
	LESSMINUS  reduce 147
	LET  reduce 157
	LIDENT  reduce 157
	LPAREN  reduce 157
	MINUS  reduce 157
	MINUSDOT  reduce 157
	OPEN  reduce 157
	OR  reduce 157
	PERCENT  reduce 157
	PLUS  reduce 157
	PLUSDOT  reduce 157
	PLUSEQ  reduce 157
	PREFIXOP  reduce 157
	RPAREN  reduce 157
	SEMI  reduce 157
	SEMISEMI  reduce 157
	STAR  reduce 157
	STRING  reduce 157
	THEN  reduce 157
	TILDE  reduce 157
	TRUE  reduce 157
	UIDENT  reduce 157


state 20
	simple_expr : LPAREN . seq_expr RPAREN  (74)
	simple_expr : LPAREN . seq_expr type_constraint RPAREN  (77)
	constr_longident : LPAREN . RPAREN  (161)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 78
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	RPAREN  shift 110
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	seq_expr  goto 111
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 21
	subtractive : MINUS .  (177)

	.  reduce 177


state 22
	subtractive : MINUSDOT .  (178)

	.  reduce 178


state 23
	open_statement : OPEN . mod_longident  (31)

	UIDENT  shift 30
	.  error

	mod_longident  goto 112


state 24
	additive : PLUS .  (179)

	.  reduce 179


state 25
	additive : PLUSDOT .  (180)

	.  reduce 180


state 26
	simple_expr : PREFIXOP . simple_expr  (81)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LIDENT  shift 83
	LPAREN  shift 20
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	val_ident  goto 37
	mod_longident  goto 38
	simple_expr  goto 113
	constr_longident  goto 99
	val_longident  goto 46
	constant  goto 47


state 27
	structure_tail : SEMISEMI . structure  (22)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 18
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	OPEN  shift 23
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	SEMISEMI  shift 27
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	EOF  reduce 21

	structure  goto 114
	seq_expr  goto 33
	structure_item  goto 34
	structure_tail  goto 35
	open_statement  goto 36
	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 39
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 28
	constant : STRING .  (150)

	.  reduce 150


state 29
	constr_longident : TRUE .  (163)

	.  reduce 163


state 30
	mod_longident : UIDENT .  (168)

	.  reduce 168


state 31
	%entry% : '\001' implementation .  (181)

	.  reduce 181


state 32
	implementation : structure . EOF  (1)

	EOF  shift 115
	.  error


state 33
	structure : seq_expr . structure_tail  (19)
	structure_tail : .  (21)

	LET  shift 116
	OPEN  shift 23
	SEMISEMI  shift 27
	EOF  reduce 21

	structure_item  goto 34
	structure_tail  goto 117
	open_statement  goto 36


state 34
	structure_tail : structure_item . structure_tail  (23)
	structure_tail : .  (21)

	LET  shift 116
	OPEN  shift 23
	SEMISEMI  shift 27
	EOF  reduce 21

	structure_item  goto 34
	structure_tail  goto 118
	open_statement  goto 36


state 35
	structure : structure_tail .  (20)

	.  reduce 20


state 36
	structure_item : open_statement .  (25)

	.  reduce 25


state 37
	val_longident : val_ident .  (158)

	.  reduce 158


state 38
	simple_expr : mod_longident . DOT LPAREN seq_expr RPAREN  (79)
	val_longident : mod_longident . DOT val_ident  (159)
	constr_longident : mod_longident .  (160)
	mod_longident : mod_longident . DOT UIDENT  (169)

	DOT  shift 119
	AMPERAMPER  reduce 160
	AMPERSAND  reduce 160
	AND  reduce 160
	BANG  reduce 160
	BARBAR  reduce 160
	BEGIN  reduce 160
	CHAR  reduce 160
	COLON  reduce 160
	COLONEQUAL  reduce 160
	COLONGREATER  reduce 160
	COMMA  reduce 160
	ELSE  reduce 160
	END  reduce 160
	EOF  reduce 160
	EQUAL  reduce 160
	FALSE  reduce 160
	FLOAT  reduce 160
	GREATER  reduce 160
	IN  reduce 160
	INFIXOP0  reduce 160
	INFIXOP1  reduce 160
	INFIXOP2  reduce 160
	INFIXOP3  reduce 160
	INFIXOP4  reduce 160
	INT  reduce 160
	LABEL  reduce 160
	LESS  reduce 160
	LET  reduce 160
	LIDENT  reduce 160
	LPAREN  reduce 160
	MINUS  reduce 160
	MINUSDOT  reduce 160
	OPEN  reduce 160
	OR  reduce 160
	PERCENT  reduce 160
	PLUS  reduce 160
	PLUSDOT  reduce 160
	PLUSEQ  reduce 160
	PREFIXOP  reduce 160
	RPAREN  reduce 160
	SEMI  reduce 160
	SEMISEMI  reduce 160
	STAR  reduce 160
	STRING  reduce 160
	THEN  reduce 160
	TILDE  reduce 160
	TRUE  reduce 160
	UIDENT  reduce 160


state 39
	seq_expr : expr .  (32)
	seq_expr : expr . SEMI  (33)
	seq_expr : expr . SEMI seq_expr  (34)
	expr : expr . INFIXOP0 expr  (45)
	expr : expr . INFIXOP1 expr  (46)
	expr : expr . INFIXOP2 expr  (47)
	expr : expr . INFIXOP3 expr  (48)
	expr : expr . INFIXOP4 expr  (49)
	expr : expr . PLUS expr  (50)
	expr : expr . PLUSDOT expr  (51)
	expr : expr . PLUSEQ expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . MINUSDOT expr  (54)
	expr : expr . STAR expr  (55)
	expr : expr . PERCENT expr  (56)
	expr : expr . EQUAL expr  (57)
	expr : expr . LESS expr  (58)
	expr : expr . GREATER expr  (59)
	expr : expr . OR expr  (60)
	expr : expr . BARBAR expr  (61)
	expr : expr . AMPERSAND expr  (62)
	expr : expr . AMPERAMPER expr  (63)
	expr : expr . COLONEQUAL expr  (64)
	expr_comma_list : expr . COMMA expr  (104)

	AMPERAMPER  shift 120
	AMPERSAND  shift 121
	BARBAR  shift 122
	COLONEQUAL  shift 123
	COMMA  shift 124
	EQUAL  shift 125
	GREATER  shift 126
	INFIXOP0  shift 127
	INFIXOP1  shift 128
	INFIXOP2  shift 129
	INFIXOP3  shift 130
	INFIXOP4  shift 131
	LESS  shift 132
	MINUS  shift 133
	MINUSDOT  shift 134
	OR  shift 135
	PERCENT  shift 136
	PLUS  shift 137
	PLUSDOT  shift 138
	PLUSEQ  shift 139
	SEMI  shift 140
	STAR  shift 141
	AND  reduce 32
	COLON  reduce 32
	COLONGREATER  reduce 32
	ELSE  reduce 32
	END  reduce 32
	EOF  reduce 32
	IN  reduce 32
	LET  reduce 32
	OPEN  reduce 32
	RPAREN  reduce 32
	SEMISEMI  reduce 32
	THEN  reduce 32


state 40
	expr : simple_expr .  (37)
	expr : simple_expr . simple_labeled_expr_list  (38)
	expr : simple_expr . DOT label_longident LESSMINUS expr  (67)
	expr : simple_expr . DOT LPAREN seq_expr RPAREN LESSMINUS expr  (68)
	simple_expr : simple_expr . DOT label_longident  (78)
	simple_expr : simple_expr . DOT LPAREN seq_expr RPAREN  (80)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	DOT  shift 142
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LABEL  shift 143
	LIDENT  shift 83
	LPAREN  shift 20
	PREFIXOP  shift 26
	STRING  shift 28
	TILDE  shift 144
	TRUE  shift 29
	UIDENT  shift 30
	AMPERAMPER  reduce 37
	AMPERSAND  reduce 37
	AND  reduce 37
	BARBAR  reduce 37
	COLON  reduce 37
	COLONEQUAL  reduce 37
	COLONGREATER  reduce 37
	COMMA  reduce 37
	ELSE  reduce 37
	END  reduce 37
	EOF  reduce 37
	EQUAL  reduce 37
	GREATER  reduce 37
	IN  reduce 37
	INFIXOP0  reduce 37
	INFIXOP1  reduce 37
	INFIXOP2  reduce 37
	INFIXOP3  reduce 37
	INFIXOP4  reduce 37
	LESS  reduce 37
	LET  reduce 37
	MINUS  reduce 37
	MINUSDOT  reduce 37
	OPEN  reduce 37
	OR  reduce 37
	PERCENT  reduce 37
	PLUS  reduce 37
	PLUSDOT  reduce 37
	PLUSEQ  reduce 37
	RPAREN  reduce 37
	SEMI  reduce 37
	SEMISEMI  reduce 37
	STAR  reduce 37
	THEN  reduce 37

	val_ident  goto 37
	mod_longident  goto 38
	simple_expr  goto 145
	simple_labeled_expr_list  goto 146
	constr_longident  goto 99
	val_longident  goto 46
	constant  goto 47
	labeled_simple_expr  goto 147
	label_expr  goto 148


state 41
	expr : expr_comma_list .  (41)
	expr_comma_list : expr_comma_list . COMMA expr  (103)

	COMMA  shift 149
	AMPERAMPER  reduce 41
	AMPERSAND  reduce 41
	AND  reduce 41
	BARBAR  reduce 41
	COLON  reduce 41
	COLONEQUAL  reduce 41
	COLONGREATER  reduce 41
	ELSE  reduce 41
	END  reduce 41
	EOF  reduce 41
	EQUAL  reduce 41
	GREATER  reduce 41
	IN  reduce 41
	INFIXOP0  reduce 41
	INFIXOP1  reduce 41
	INFIXOP2  reduce 41
	INFIXOP3  reduce 41
	INFIXOP4  reduce 41
	LESS  reduce 41
	LET  reduce 41
	MINUS  reduce 41
	MINUSDOT  reduce 41
	OPEN  reduce 41
	OR  reduce 41
	PERCENT  reduce 41
	PLUS  reduce 41
	PLUSDOT  reduce 41
	PLUSEQ  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	SEMISEMI  reduce 41
	STAR  reduce 41
	THEN  reduce 41


state 42
	expr : constr_longident . simple_expr  (42)
	simple_expr : constr_longident .  (73)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 17
	LIDENT  shift 83
	LPAREN  shift 20
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	AMPERAMPER  reduce 73
	AMPERSAND  reduce 73
	AND  reduce 73
	BARBAR  reduce 73
	COLON  reduce 73
	COLONEQUAL  reduce 73
	COLONGREATER  reduce 73
	COMMA  reduce 73
	DOT  reduce 73
	ELSE  reduce 73
	END  reduce 73
	EOF  reduce 73
	EQUAL  reduce 73
	GREATER  reduce 73
	IN  reduce 73
	INFIXOP0  reduce 73
	INFIXOP1  reduce 73
	INFIXOP2  reduce 73
	INFIXOP3  reduce 73
	INFIXOP4  reduce 73
	LABEL  reduce 73
	LESS  reduce 73
	LET  reduce 73
	MINUS  reduce 73
	MINUSDOT  reduce 73
	OPEN  reduce 73
	OR  reduce 73
	PERCENT  reduce 73
	PLUS  reduce 73
	PLUSDOT  reduce 73
	PLUSEQ  reduce 73
	RPAREN  reduce 73
	SEMI  reduce 73
	SEMISEMI  reduce 73
	STAR  reduce 73
	THEN  reduce 73
	TILDE  reduce 73

	val_ident  goto 37
	mod_longident  goto 38
	simple_expr  goto 150
	constr_longident  goto 99
	val_longident  goto 46
	constant  goto 47


state 43
	expr : subtractive . expr  (65)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	IF  shift 16
	INT  shift 17
	LET  shift 78
	LIDENT  shift 19
	LPAREN  shift 20
	MINUS  shift 21
	MINUSDOT  shift 22
	PLUS  shift 24
	PLUSDOT  shift 25
	PREFIXOP  shift 26
	STRING  shift 28
	TRUE  shift 29
	UIDENT  shift 30
	.  error

	val_ident  goto 37
	mod_longident  goto 38
	expr  goto 151
	simple_expr  goto 40
	expr_comma_list  goto 41
	constr_longident  goto 42
	subtractive  goto 43
	additive  goto 44
	label  goto 45
	val_longident  goto 46
	constant  goto 47


state 44
	expr : additive . expr  (66)
